--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -46,10 +46,14 @@ form {
     background-image: none;
     border: 1px solid #ccc;
     border-radius: 3px;
+    color: #777;
+    line-height: 20px;
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
     font-size: 14px;
-    line-height: 20px;
-    color: #777;
+  }
+
+  textarea.form-control {
+    height: auto;
   }
 
   /* normal button look*/
