--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -405,10 +405,12 @@ form {
     background-image: none;
     border: 1px solid #ccc;
     border-radius: 3px;
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-    font-size: 14px;
+    color: #777;
     line-height: 20px;
-    color: #777; }
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    font-size: 14px; }
+  form textarea.form-control {
+    height: auto; }
   form .btn {
     display: inline-block;
     padding: 6px 12px;
@@ -473,9 +475,7 @@ header {
 footer {
   font-size: 0.8rem;
   border-top: 1px solid #e8e8e8;
-  bottom: 1%;
   color: #999;
-  position: absolute;
   text-align: center;
   width: 100%;
   padding: 10px 0; }
