--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -381,6 +381,13 @@ body {
   font-size: 100%;
   font-family: \5FAE\8F6F\96C5\9ED1,\534E\6587\7EC6\9ED1; }
 
+.content {
+  max-width: 1024px;
+  margin: 0 auto; }
+
+.flex {
+  display: flex; }
+
 /* form and controls */
 form {
   /* normal button look*/
@@ -435,11 +442,10 @@ form {
     font-size: 28px; }
 
 /* list */
-ul.nav {
-  list-style-type: none;
-  margin-left: 0;
-  padding-left: 0;
-  margin-top: 0; }
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0; }
   ul.nav a {
     display: block;
     height: 2;
@@ -452,12 +458,33 @@ ul.nav {
   ul.nav li:first-child a {
     border-top: 1px solid #ccc; }
 
-.content {
-  max-width: 1024px;
-  margin: 0 auto; }
-
-.flex {
-  display: flex; }
+.tab-container {
+  border: 1px solid #ccc;
+  padding: 6px 8px; }
+  .tab-container li {
+    display: inline-block;
+    cursor: pointer; }
+  .tab-container .tab-header li {
+    padding: 3px 8px;
+    border: 1px solid #ccc;
+    border-bottom: none;
+    position: relative;
+    background-color: #fff;
+    top: -1px;
+    z-index: 1; }
+    .tab-container .tab-header li:hover:not(.tab-label-active) {
+      background-color: #aaa; }
+    .tab-container .tab-header li.tab-label-active {
+      border: 2px solid blue;
+      border-bottom: none;
+      top: 0; }
+  .tab-container .tab-content {
+    border-top: 1px solid blue;
+    padding-top: 6px;
+    position: relative;
+    margin-top: -1px; }
+    .tab-container .tab-content li:hover {
+      background-color: #aaa; }
 
 /* header */
 header {
