--- a/views/user/_signup_step2.pug
+++ b/views/user/_signup_step2.pug
@@ -1,4 +1,4 @@
-form(method='post', action='/signup', class='signup' + step)
+form(method='post', action='/signup', class='signup', data-step=step)
   input(type='hidden', name='step', value=step)
   if userType == 0
     // 学生信息
