--- a/views/user/signupView.pug
+++ b/views/user/signupView.pug
@@ -1,4 +1,6 @@
 extends ../layouts/main
+block js
+  script(src='/js/signup.js')
 block css
   link(href="/css/signup.css", rel="stylesheet")
 block content
