--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -10,9 +10,8 @@
 }
 
 body {
-  font-size: 100%;
+  font-size: 14px;
   font-family: \5FAE\8F6F\96C5\9ED1,\534E\6587\7EC6\9ED1;
-  position:relative;
 }
 
 .content {
