--- a/views/jobs/new.pug
+++ b/views/jobs/new.pug
@@ -1,25 +1,28 @@
 extends ../layouts/main
+block css
+  link(href="/css/job.css", rel="stylesheet")
+block js
+  script(src='/js/job.js')
 block content
-  div
+  div.content
     form(method='post', action='/jobs', class='new-job')
-      p
-        label(for='title') 职位名称：
-        input(type='text', name='title', id='title', autofocus)
-      p
-        label(for='address') 工作地点：
-        input(type='text', name='address', id='address')
-      p
-        label(for='salary') 薪资：
-        input(type='text', name='salary', id='salary' value='0')
-        span 元/月(不填或0表示面议)
-      p
-        label(for='duty') 职责：
-        textarea(name='duty', id='duty')
-      p
-        label(for='requirement') 要求：
-        textarea(name='requirement', id='requirement')
-      p
-        label(for='notes') 备注：
-        textarea(name='notes', id='notes')
-      p
-        input(type='submit', value='创建')
+      .form-group
+        label(for='title' class='label label-input') 职位名称：
+        input(type='text', name='title', id='title', class='form-control' autofocus)
+      .form-group
+        label(for='address' class='label label-input') 工作地点：
+        input(type='text', name='address', id='address', class='form-control')
+      .form-group
+        label(for='salary' class='label label-input') 薪资：
+        input(type='text', name='salary', id='salary' value='0', class='form-control')
+      .form-group
+        label(for='duty' class='label label-input') 职责：
+        textarea(name='duty', id='duty', class='form-control')
+      .form-group
+        label(for='requirement' class='label label-input') 要求：
+        textarea(name='requirement', id='requirement', class='form-control')
+      .form-group
+        label(for='notes' class='label label-input') 备注：
+        textarea(name='notes', id='notes', class='form-control')
+      .form-group
+        input(type='submit', value='创建', class='btn btn-primary')
