--- a/assets/sass/job.scss
+++ b/assets/sass/job.scss
@@ -2,4 +2,22 @@
 
 .new-job {
   margin-top:20px;
+
+  & > div.flex {
+    justify-content:space-between;
+
+    & > div {
+      width:48%;
+    }
+
+    div.flex {
+      flex-flow:column;
+      .form-group {
+        flex:1;
+        textarea {
+          height:227px;
+        }
+      }
+    }
+  }
 }
