--- a/views/jobs/new.pug
+++ b/views/jobs/new.pug
@@ -16,7 +16,11 @@ block content
             input(type='text', name='address', id='address', class='form-control')
           .form-group
             label(for='salary' class='label label-input') 薪资：
-            input(type='text', name='salary', id='salary' value='0', class='form-control')
+            select(name='salary', id='salary' class='form-control')
+              option(value='-1' selected) 请选择
+              each s, i in salaries
+                option(value=i)= s 
+        div
           .form-group
             label(for='business' class='label label-input') 行业：
             select(name='business', id='business' class='form-control')
@@ -30,18 +34,16 @@ block content
               each t in types
                 option(value=t)= t 
           .form-group
-            label(for='labels' class='label label-input') 标签：
-            input(name='labels', id='labels', class='form-control')
-          .form-group
             label(for='notes' class='label label-input') 备注：
-            textarea(name='notes', id='notes', class='form-control')
-        div.flex
+            input(type='text', name='notes', id='notes', class='form-control')
+        div
           .form-group
             label(for='duty' class='label label-input') 职责：
-            textarea(name='duty', id='duty', class='form-control')
+            textarea(name='duty', id='duty', class='form-control', rows=12)
+        div
           .form-group
             label(for='requirement' class='label label-input') 要求：
-            textarea(name='requirement', id='requirement', class='form-control')
+            textarea(name='requirement', id='requirement', class='form-control', rows=12)
       div
         .form-group
           input(type='submit', value='发布职位', class='btn btn-primary')
