--- a/views/home/index.pug
+++ b/views/home/index.pug
@@ -32,8 +32,8 @@ block content
     .guide-student
       h3 我是学生：
       h4
-        a(href='/jobs' class='btn btn-large btn-primary') 开始找寻实习岗位
+        a(href='/jobs' class='btn btn-primary') 开始找寻实习岗位
     .guide-company
       h3 我是公司：
       h4
-        a(href='/students' class='btn btn-large btn-primary') 开始找寻心仪学生
+        a(href='/students' class='btn btn-primary') 开始找寻心仪学生
