--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -10,7 +10,7 @@
 }
 
 body {
-  font-size: 14px;
+  font-size: 15px;
   font-family: \5FAE\8F6F\96C5\9ED1,\534E\6587\7EC6\9ED1;
 }
 
@@ -21,6 +21,10 @@ body {
 
 .flex {
   display: flex;
+}
+
+p {
+  margin:6px 0;
 }
 
 /* form and controls */
@@ -64,64 +68,43 @@ form {
   textarea.form-control {
     height: auto;
   }
+}
 
-  /* normal button look*/
-  .btn {
-    display: inline-block;
-    padding: 6px 12px;
-    font-size: 14px;
-    font-weight: 600;
-    line-height: 1.4;
-    color: #fff;
-    text-align:center;
-    vertical-align: middle;
-    cursor: pointer;
-    background-color: #eee;
-    border: 1px solid #d5d5d5;
-    border-radius: 3px;
-  }
+/* normal button look*/
+.btn {
+  display: inline-block;
+  padding: 6px 12px;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1.4;
+  color: #fff;
+  text-align:center;
+  vertical-align: middle;
+  cursor: pointer;
+  background-color: #777;
+  border: 1px solid #d5d5d5;
+  border-radius: 3px;
+}
 
-  .btn:hover {
-    background-color: #fcfcfc;
-  }
+.btn:hover {
+  background-color: #6a6a6a;
+}
 
-  /* primary button look*/
-  .btn-primary {
-    background-color: #609B26;
-    border: 1px solid #355317;
-  }
+/* primary button look*/
+.btn-primary {
+  background-color: #609B26;
+  border: 1px solid #355317;
+}
 
-  .btn-primary:hover {
-    background-color: #4F7B22;
-  }
-
-  .btn-large {
-    font-size: 28px;
-  }
+.btn-primary:hover {
+  background-color: #4F7B22;
 }
 
 /* list */
-ul {
+ul.nav {
   list-style: none;
   padding: 0;
   margin: 0;
-
-  &.nav {
-    a {
-      display: block;
-      height: 2;
-      line-height: 2;
-      border-top: none;
-      border-right: 1px solid #ccc;
-      border-bottom: 1px solid #ccc;
-      border-left: 3px solid #000;
-      padding-left: 8px;
-    }
-
-    li:first-child a {
-      border-top: 1px solid #ccc;
-    }
-  }
 }
 
 .tab-container {
