--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -3,15 +3,15 @@
 .index-container {
   margin-top: 20px;
   border-bottom: 1px solid #eee;
+  justify-content:space-between;
 
   .index-signup {
-    flex: 1 1 400px;
-    padding-right: 40px;
+    flex: 1;
+    padding-right:60px;
   }
 
   .slogan {
-    flex: 2 1 800px;
-    padding-left: 40px;
+    flex: 2;
     text-align: center;
   }
 }
