--- a/views/home/index.pug
+++ b/views/home/index.pug
@@ -1,19 +1,22 @@
 extends ../layouts/main
 block css
   link(href="/css/index.css", rel="stylesheet")
+block js
+  script(src='/js/home.js')
 block content
   .flex.index-container.content
     .index-signup
       form(method='post', action='/signup')
         .form-group
+          input(type='hidden', name='step', value='1')
           label(for='name' class='label label-input') 用户名
-          input(type='text', name='name', id='name', placeholder='字母数字中文等，唯一' class='form-control')
+          input(type='text', name='name', id='name', placeholder='字母数字中文等，唯一' class='form-control', required)
         .form-group
           label(for='email' class='label label-input') Email
-          input(type='email', name='email', id='email', placeholder='xxx@yyy.com' class='form-control')
+          input(type='email', name='email', id='email', placeholder='xxx@yyy.com' class='form-control' required)
         .form-group
           label(for='password' class='label label-input') 密码
-          input(type='password', name='password', id='password', placeholder='不少于6位' class='form-control')
+          input(type='password', name='password', id='password', class='form-control' required)
         .form-group
           label(class='label label-radio')
             input(type='radio', id='user-type-student', name='userType', value=0, checked)
