--- a/views/user/_signup_step1.pug
+++ b/views/user/_signup_step1.pug
@@ -8,7 +8,7 @@ form(method='post', action='/signup', class='signup', data-step=step)
     input(type='email', name='email', id='email', placeholder='xxx@yyy.com' class='form-control')
   .form-group
     label(for='password' class='label label-input') 密码
-    input(type='password', name='password', id='password', placeholder='不少于6位' class='form-control')
+    input(type='password', name='password', id='password', class='form-control')
   .form-group
     label(class='label label-radio')
       input(type='radio', id='user-type-student', name='userType', value=0, checked)
