--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -67,6 +67,7 @@ form {
     line-height: 20px;
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
     font-size: 14px;
+    outline:none;
   }
 
   textarea.form-control {
@@ -77,7 +78,6 @@ form {
     display: inline-block;
     margin-top: 6px;
     color: #f00;
-    font-size: 0.9em;
   }
 
   input.input-error {
@@ -86,6 +86,14 @@ form {
 
   .input-valid {
     border: 1px solid #0f0;
+  }
+
+  .form-control-hint {
+    color: #777;
+    font-size: 0.8em;
+    font-family: NSimSun, Microsoft YaHei;
+    margin-top:6px;
+    line-height:1.4;
   }
 }
 
@@ -120,7 +128,7 @@ form {
 }
 
 /* list */
-ul.nav {
+ul {
   list-style: none;
   padding: 0;
   margin: 0;
