--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -1,6 +1,11 @@
 /* header */
 header {
   background-color: #ddd;
+  line-height:1.5;
+  .logo {
+    font-size:1.5em;
+    font-weight:bold;
+  }
   padding: 6px 0;
   .header-container {
     position: relative;
