--- a/views/layouts/_head.pug
+++ b/views/layouts/_head.pug
@@ -7,5 +7,5 @@ header
         span 你好, #[a(href='/profile')= cu.name]
         a(href='/logout') 退出
       else
-        a(href='login') 登陆
-        a(href='signup') 注册
+        a(href='login' class='btn btn-primary') 登陆
+        a(href='signup' class='btn') 注册
