--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -1,17 +1,18 @@
 /* header */
 header {
   background-color: #ddd;
-  line-height:1.5;
-  .logo {
-    font-size:1.5em;
-    font-weight:bold;
-  }
   padding: 6px 0;
+
   .header-container {
-    position: relative;
+    align-items:center;
+    .logo {
+      font-size:1.5em;
+      line-height:1.5;
+      font-weight:bold;
+      margin-right:auto;
+    }
+
     span.user-nav {
-      position: absolute;
-      right: 0;
       a, span {
         margin-left: 6px;
       }
