--- a/views/user/loginView.pug
+++ b/views/user/loginView.pug
@@ -7,10 +7,10 @@ block content
   div.content.login-container
     form(method='post', action='/login', class='login')
       .form-group
-        label(for='name' class='label label-input') 用户名：
-        input(type='text', name='name', id='name', placeholder='用户名/邮箱', class='form-control' autofocus)
+        label(for='email' class='label label-input') Email：
+        input(type='email', name='email', id='email', class='form-control' autofocus, required)
       .form-group
         label(for='password' class='label label-input') 密码：
-        input(type='password', name='password', id='password' class='form-control')
+        input(type='password', name='password', id='password' class='form-control', required)
       .form-group
         input(type='submit', value='登 陆' class='btn btn-primary')
